--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8180
 spring:
   application:
-    name: practice-batch
+    name: spring-batch-template
   datasource:
     url: jdbc:h2:mem:batch-test
     username: sa
