--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
     hibernate:
       ddl-auto: none # Hibernate 가 테이블 스키마를 변경하지 않도록 설정
     show-sql: true
-    database-platform: org.hibernate.dialect.H2Dialect
+    open-in-view: false
   batch:
     job:
       enabled: false # true 이면 애플리케이션 실행 시 Job 자동 실행
